# postgraphql

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs  pool.rs
src/entities/: column.rs  mod.rs  table.rs
src/services/: constant_queries.rs  db_schema_service.rs  mod.rs
