[package]
name = "postgraphql"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres = "0.7"
async-graphql = "7.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
deadpool-postgres = "0.14"
